<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_scrollEffect="none"
    tools:context=".VerificationActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/chat_lottie" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhai"
        android:text="@string/enter_your_mobile_number"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/llTvDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/baloo_da_2"
            android:text="@string/we_will_send_you_an"
            android:textAlignment="textEnd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/baloo_da_2"
            android:text="@string/one_time_password"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_da_2"
        android:text="@string/on_this_mobile_number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/llTvDisplay"
        app:layout_constraintStart_toStartOf="@+id/llTvDisplay"
        app:layout_constraintTop_toBottomOf="@+id/llTvDisplay" />


    <LinearLayout
        android:id="@+id/numberFiled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:elevation="1dp"
            app:cardBackgroundColor="#FBFBFB"
            app:cardCornerRadius="13dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:background="#FBFBFB"
                    android:textAlignment="textEnd"
                    app:ccp_defaultPhoneCode="880"
                    app:ccp_flagBorderColor="#C5C5C5"
                    app:ccp_padding="13dp"
                    app:ccp_showArrow="false"
                    app:ccp_textGravity="RIGHT"
                    app:ccp_textSize="17sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/main_white"
                    android:hint="@string/dammy_phone_number"
                    android:inputType="number"
                    android:maxLength="11"
                    android:layout_marginTop="-1dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="7dp"
                    android:textSize="17sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/baloo_da_2"
        android:paddingTop="5dp"
        android:text="@string/continue_btn_text"
        android:textColor="#fff"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/numberFiled"
        app:layout_constraintStart_toStartOf="@+id/numberFiled"
        app:layout_constraintTop_toBottomOf="@+id/numberFiled" />

    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_da_2"
        android:text="@string/by_continuing_you_agree_to_rooh_chat"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/baloo_da_2"
            android:text="@string/terms_of_use"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/baloo_da_2"
            android:text="@string/amp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTerms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:fontFamily="@font/baloo_da_2"
            android:text="@string/privacy_policy"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>